--- a/dev_informe/tex/algoritmos.tex
+++ b/dev_informe/tex/algoritmos.tex
@@ -1,9 +1,2 @@
-\section{Algoritmo greedy para la resolución del problema}
+\section{Algoritmo por programación dinámica}
 
-El problema que se nos presenta en resumidas cuentas es el siguiente:
-
-En un juego por turnos, se nos da una fila con monedas y solo puedo sacar una de uno de los extremos de la fila por turno. El juego termina cuando no quedan más monedas, y gana el jugador que haya acumulado la mayor ganancia.
-
-Recordemos que un algoritmo greedy, es aquel que al aplicar una regla sencilla, nos permita obtener el óptimo local a mi estado actual, y aplicando iterativamente esa regla, llegar a (idealmente) un óptimo global.
-
-Entonces, un algoritmo greedy para resolver el problema, podría ser el siguiente: Vemos las monedas de ambos extremos (mi información actual), y me quedo con la de mayor valor cuando es el turno de Sophia, y la de menor valor cuando es el turno de Mateo (está seria nuestra regla sencilla), la cual aplicamos reiterativamente (hasta que no haya monedas) para llegar a una solución óptima (que Sophia gane siempre).
