--- a/dev_informe/tex/conclusiones.tex
+++ b/dev_informe/tex/conclusiones.tex
@@ -1,2 +1,11 @@
 \section{Conclusiones}
 
+Pudimos observar y verificar lo siguiente:
+
+\begin{itemize}
+
+\item Utilizando la tecnica de programacion dinamica con memorizacion, pudimos reducir la complejidad de un algortimo exponencial a uno cuadrático, al no tener que recalcular problemas anteriormente resueltos.
+\item Tras realizar un analisis empirico, pudimos confirmar que efectivamente la complejidad de nuestro algoritmo se vio beneficiada por la tecnica de programacion dinamica.
+\end {itemize}
+
+En conclusión, el presente trabajo permitió afianzar los conocimientos adquiridos en la materia de una manera práctica, donde desarrollamos 
