--- a/dev_informe/tex/ejemplosDeSolucion.tex
+++ b/dev_informe/tex/ejemplosDeSolucion.tex
@@ -1,1 +1,12 @@
 \section{Ejemplos de ejecución}
+Se pueden encontrar encontrar multiples ejemplos de ejecución dentro del directorio \textit{ejemplos} en el repositorio. Veamos algunos:
+
+Supongamos que tenemos 5 monedas:
+
+\begin{lstlisting}
+    [96, 594, 437, 674, 950]
+\end{lstlisting}
+
+El primer turno es de Sophia, donde tiene 2 opciones: elegir la moneda del principio o la del final.
+Sabiendo que Mateo siempre va a elegir la moneda de mayor valor en los turnos posteriores, Sophia debe elegir la moneda que maximice su ganancia total.
+
