agrego conclusion y corrijo errores de ortografia

--- a/dev_informe/tex/algoritmos.tex
+++ b/dev_informe/tex/algoritmos.tex
@@ -1,7 +1,7 @@
 \section{Ecuación de recurrencia}
 
-A continuación se mostrará la ecuación de recurrencia hallada para este
-problema
+A continuación se mostrará la \textbf{ecuación de recurrencia} hallada para este
+problema:
 
 \vskip0.5cm
 
@@ -31,7 +31,7 @@ $S(monedas, inicioFila, finFila) = \left\{ \begin{array}{lcc} (inicioFila+1,finF
 
 \vskip0.5cm
 
-NOTA: 
+\textbf{NOTA}: 
 
 $monedas$ = El vector con los valores de las monedas
 
