--- a/dev_informe/tex/demostracion.tex
+++ b/dev_informe/tex/demostracion.tex
@@ -1,6 +1,6 @@
 \section{Demostración del Algortimo}
 
-Para que la ecuación de recurrencia sea la solución óptima, osea que nos de el máximo valor acumulado posible, basta con verificar que:
+Para que la ecuación de recurrencia sea la solución óptima, osea que nos de el \textbf{máximo valor acumulado posible}, basta con verificar que:
 
 \begin{enumerate}
     \item La solución óptima de un problema grande puede obtenerse combinando soluciones óptimas de subproblemas más pequeños.
