--- a/dev_informe/tex/complejidad.tex
+++ b/dev_informe/tex/complejidad.tex
@@ -5,7 +5,7 @@ El algoritmo que decidimos utilizar para resolver el problema, es el siguiente:
 \begin {itemize}
 \item Mientras hayan monedas para elegir:
     \begin {itemize}
-    \item Vemos todas las monedas disponibles y en funcion de eso:
+    \item Vemos todas las monedas disponibles y en función de eso:
         \begin {itemize}
         \item En el turno de Sophia, se elige la moneda que maximice la ganancia total, teniendo en cuenta que Mateo siempre va a elegir la moneda de mayor valor en todos los turnos posteriores.
         \item En el turno de Mateo, se elige la moneda de mayor valor.
@@ -15,6 +15,7 @@ El algoritmo que decidimos utilizar para resolver el problema, es el siguiente:
 \end {itemize}
 
 Veamos el código:
+\vskip0.25cm
 \begin{lstlisting}[language=Python]
     def juego_monedas(arr):
         memory = {}
@@ -46,20 +47,20 @@ Veamos el código:
             return (inicio + 1, fin)
         return (inicio, fin - 1)    
 \end{lstlisting}
-
+\vskip0.25cm
 Lo que estamos haciendo, es de forma recursiva observar todas las decisiones que puede tomar Sophia (sabiendo como se comporta Mateo) y quedarnos con la que maximice la ganancia total. 
 Partimos de un caso base, donde si Sophia no tiene monedas para elegir, la ganancia es 0.
-Luego en cada llamado recursivo, vemos que moneda debemos elegir para maximizar la ganancia de ese sub-problema, y guardamos en memoria el resultado para no tener que volver a calcularlo en caso de que se repita. De esta forma, combinando la solucion de los subproblemas, encontramos la solucion del problema original, que resulta en la maxima ganancia que puede obtener Sophia.
+Luego en cada llamado recursivo, vemos que moneda debemos elegir para maximizar la ganancia de ese sub-problema, y guardamos en memoria el resultado para no tener que volver a calcularlo en caso de que se repita. De esta forma, combinando la solución de los subproblemas, encontramos la solucion del problema original, que resulta en la máxima ganancia que puede obtener Sophia.
 
 
-La complejidad temporal de este algoritmo en principio seria exponencial (O($2^n$)), ya que en cada llamado recursivo se hacen dos llamados recursivos mas, y asi sucesivamente.
-Sin embargo, al utilizar memoria para guardar los resultados de los subproblemas, evitamos tener que recalcularlos, reduciendo la complejidad a cuadratica (O($n^2$)). Esta complejidad surge de que la cantidad de subproblemas a resolver es $n^2$, ya que cada subproblema esta definido por un intervalo i,j donde i y j pueden tomar valores de 0 a n-1, siendo n la cantidad de monedas disponibles.
+La complejidad temporal de este algoritmo en principio sería exponencial \textbf{(O($2^n$))}, ya que en cada llamado recursivo se hacen dos llamados recursivos más, y así sucesivamente.
+Sin embargo, al utilizar memoria para guardar los resultados de los subproblemas, evitamos tener que recalcularlos, reduciendo la complejidad a cuadrática \textbf{(O($n^2$))}. Esta complejidad surge de que la cantidad de subproblemas a resolver es $n^2$, ya que cada subproblema esta definido por un intervalo $i$,$j$ donde $i$ y $j$ pueden tomar valores de 0 a $n-1$, siendo $n$ la cantidad de monedas disponibles.
 
-La complejidad espacial del algoritmo es O($n^2$) ya que la memoria utilizada para guardar los resultados de los subproblemas es proporcional a la cantidad de subproblemas a resolver. Respecto al tamaño del stack es despreciable frente a este valor, ya que a lo sumo hay n llamados recursivos en simultaneo.
+La complejidad espacial del algoritmo es \textbf{O($n^2$)} ya que la memoria utilizada para guardar los resultados de los subproblemas es proporcional a la cantidad de subproblemas a resolver. Respecto al tamaño del stack es despreciable frente a este valor, ya que a lo sumo hay $n$ llamados recursivos en simultaneo.
 
-En resumen, la complejidad temporal y espacial del algoritmo es O($n^2$).
-
-Nota: En este analisis no se considera el algoritmo para la reconstruccion de la solucion. 
+En resumen, la complejidad temporal y espacial del algoritmo es \textbf{O($n^2$)}.
+\vskip0.5cm
+\textbf{NOTA}: En este análisis no se considera el algoritmo para la reconstrucción de la solución. 
 
 \subsection{Variabilidad}
 
