agrego ejemplos de ejecucion

--- a/dev_informe/tex/ejemplosDeSolucion.tex
+++ b/dev_informe/tex/ejemplosDeSolucion.tex
@@ -7,6 +7,21 @@ Supongamos que tenemos 5 monedas:
     [96, 594, 437, 674, 950]
 \end{lstlisting}
 
-El primer turno es de Sophia, donde tiene 2 opciones: elegir la moneda del principio o la del final.
-Sabiendo que Mateo siempre va a elegir la moneda de mayor valor en los turnos posteriores, Sophia debe elegir la moneda que maximice su ganancia total.
+Veamos lo que obtenemos al ejecutar en código el ejemplo que acabamos de ver:
 
+\begin{center}
+    \includegraphics[scale = 0.6]{ {images/screen3.png} } 
+\end{center}
+
+Veamos la ejecución de otros ejemplos brindados por la cátedra:
+\vskip0.5cm
+Este ejemplo es con 10 monedas:
+\begin{center}
+    \includegraphics[scale = 0.6]{ {images/screen1.png} } 
+\end{center}
+Este ejemplo es con 25 monedas:
+\begin{center}
+    \includegraphics[scale = 0.6]{ {images/screen2.png} } 
+\end{center}
+
+Como podemos observar, los resultados obtenidos coinciden con los \textit{Resultados esperados} compartidos por la cátedra.
