--- a/dev_informe/tex/conclusiones.tex
+++ b/dev_informe/tex/conclusiones.tex
@@ -4,8 +4,8 @@ Pudimos observar y verificar lo siguiente:
 
 \begin{itemize}
 
-\item Utilizando la tecnica de programacion dinamica con memorizacion, pudimos reducir la complejidad de un algortimo exponencial a uno cuadrático, al no tener que recalcular problemas anteriormente resueltos.
-\item Tras realizar un analisis empirico, pudimos confirmar que efectivamente la complejidad de nuestro algoritmo se vio beneficiada por la tecnica de programacion dinamica.
+\item Utilizando la técnica de programación dinámica con memorización, pudimos reducir la complejidad de un algortimo exponencial a uno cuadrático, al no tener que recalcular problemas anteriormente resueltos.
+\item Tras realizar un análisis empírico, pudimos confirmar que efectivamente la complejidad de nuestro algoritmo se vió beneficiada por la técnica de programación dinámica.
 \item la variabilidad de los valores de las monedas \textbf{no} afecta en el tiempo de ejecución del algortimo.
 \end {itemize}
 
