Add tests to informe

--- a/dev_informe/tex/ejemplosDeSolucion.tex
+++ b/dev_informe/tex/ejemplosDeSolucion.tex
@@ -37,3 +37,7 @@ Este ejemplo es con 25 monedas:
 Como podemos observar, los resultados obtenidos coinciden con los \textit{Resultados esperados} compartidos por la cátedra.
 
 Ademas de estos ejemplos, se pueden encontrar otros en el directorio \textit{ejemplos} del repositorio. Los mismos pueden ser ejecutados con el comando \textit{pytest -v -s} en la terminal.
+
+\begin{center}
+    \includegraphics[scale = 0.4]{ {images/tests.png} } 
+\end{center}
