Comentarios en el codigo. Correcciones menores en el informe. Copio el informe a la carpeta raiz

--- a/dev_informe/tex/algoritmos.tex
+++ b/dev_informe/tex/algoritmos.tex
@@ -42,4 +42,4 @@ $finFila$ = Es el valor de la última moneda del vector monedas
 \vskip0.5cm
 
 Nuestra función $T(monedas, inicioFila, finFila)$ nos otorga la ganancia que consiguió Sophia al momento de jugar con una cantidad de $n$ monedas contra Mateo. En esta, podemos observar como nuestras variables $K_{1}$ y $K_{2}$
-realizan llamados recursivos a $T$ teniendo en cuenta como variables $inicioFila$ y $finFila$ la salida de otra función llamada $S(monedas, inicioFila, finFila)$ , que son las dos posibles decisiones que puede tomar mateo al elegir una moneda (recordemos que mateo sigue las reglas del juego estríctamente).
+realizan llamados recursivos a $T$ teniendo en cuenta como variables $inicioFila$ y $finFila$ la salida de otra función llamada $S(monedas, inicioFila, finFila)$ , que son las dos posibles decisiones que puede tomar mateo al elegir una moneda (recordemos que Mateo sigue una regla estricta de tomar la moneda de mayor valor entre la primera y la última).
