Correcciones menores en la desmotracion

--- a/dev_informe/tex/demostracion.tex
+++ b/dev_informe/tex/demostracion.tex
@@ -12,11 +12,11 @@ Vamos a demostrar entonces que nuestro algoritmo siempre encuentra la maxima gan
 
 \begin{itemize}
     \item Nuestro caso base es el siguiente: Si no hay monedas, Sophia tendría ganancia cero ya que no habría monedas para agarrar.
-    \item Un subproblema es determinar la ganancia máxima que Sophia puede obtener en un intervalo de monedas dado por los índices \(i\) y \(j\) en el arreglo de monedas (donde \(i\) representa el índice de la primera moneda, y \(j\) el de la última). Para cada subproblema, Sophia debe tomar la decisión de sí:
+    \item Un subproblema consiste en determinar la ganancia máxima que Sophia puede obtener en un intervalo de monedas dado por los índices \(i\) y \(j\) en el arreglo de monedas (donde \(i\) representa el índice de la primera moneda, y \(j\) el de la última). Para cada subproblema, Sophia debe tomar la decisión de sí:
     \begin{itemize}
-        \item Agarrar la primera moneda \(m_i\), luego continuar con el subproblema de las monedas entre los índices \(i+2\) y \(j\) (si Mateo también agarró la primera moneda) o \(i+1\) y \(j-1\) (si Mateo agarró la última moneda).
-        \item Agarrar la última moneda \(m_j\), luego continuar con el subproblema de las monedas entre los índices \(i+1\) y \(j-1\) (si Mateo agarró la primera moneda) o \(i\) y \(j-2\) (si Mateo también agarró la última moneda).
+        \item Agarrar la primera moneda \(m_i\), lo que lleva a resolver el subproblema de las monedas entre los índices \(i+2\) y \(j\) (si Mateo también agarró la primera moneda) o \(i+1\) y \(j-1\) (si Mateo agarró la última moneda).
+        \item Agarrar la última moneda \(m_j\), lo que lleva a resolver el subproblema de las monedas entre los índices \(i+1\) y \(j-1\) (si Mateo agarró la primera moneda) o \(i\) y \(j-2\) (si Mateo también agarró la última moneda).
     \end{itemize}
-    \item Como vemos en el ítem anterior, nuestros subproblemas cada vez se vuelven más pequeños, hasta eventualmente alcanzar el caso base (Top Down). A medida que vamos resolviendo los subproblemas, los memorizamos para no tener que recalcularlos, y ya que estamos considerando todas las posibilidades de decisión que puede tomar Sophia (y que va a tomar Mateo en consecuencia), hemos considerado (y memorizado) todas las soluciones a los subproblemas posibles, y con lo cual podemos hallar la solución óptima para nuestro problema original.
+    \item Como se observa en el ítem anterior, nuestros subproblemas se vuelven cada vez más pequeños, hasta eventualmente alcanzar el caso base (enfoque Top Down). A medida que vamos resolviendo estos subproblemas, memorizamos sus resultados para no tener que recalcularlos. Al considerar todas las posibles decisiones que puede tomar Sophia (y las que va a tomar Mateo en consecuencia), hemos considerado (y memorizado) todas las soluciones a los subproblemas posibles, y al combinarlos hallamos la solución óptima para nuestro problema original.
     \item Es decir, dado que cada subproblema se resuelve de forma óptima y se usan esas soluciones para construir la solución final, el algoritmo garantiza que dicha solución será la ganancia máxima que Sophia puede obtener.
 \end{itemize}
